fix z-index intervalWindow

--- a/frontend/app/components/common/intervalWindow/intervalWindow.module.css
+++ b/frontend/app/components/common/intervalWindow/intervalWindow.module.css
@@ -10,6 +10,7 @@
   padding: 20px;
   border: 1px solid #000;
   text-align: center;
+  z-index: 11;
 }
 
 @media (max-width: 700px) {
